--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,14 +13,7 @@
   "vim.useSystemClipboard": true,
   "vim.hlsearch": true,
   "vim.leader": "<space>",
-  "cSpell.words": [
-    "cooldown",
-    "Poolable",
-    "Powerup",
-    "powerups",
-    "pullable",
-    "renderable"
-  ],
+  "cSpell.words": ["cooldown", "Poolable", "Powerup", "powerups", "pullable", "renderable"],
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "terminal.integrated.profiles.windows": {
     "Git Bash": {
