--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -10,6 +10,9 @@
     "build:post": "node ../../scripts/copy-dist.js",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@brotov2/game": "workspace:*"
+  },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@types/fs-extra": "^11.0.4",
