--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@brotov2/game": "workspace:*"
+    "@brotov2/ecs": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
