--- a/packages/ecs/package.json
+++ b/packages/ecs/package.json
@@ -10,7 +10,9 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@brotov2/render": "workspace:*"
+  },
   "devDependencies": {
     "vitest": "^2.1.8",
     "@vitest/ui": "^2.1.8",
